<resources>
    <string name="app_name">Summer-part2-chapter04</string>
    <string name="clear">C</string>
    <string name="bracket">()</string>
    <string name="percent">%</string>
    <string name="division">÷</string>
    <string name="product">x</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="dot">.</string>
    <string name="equal">=</string>

    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>

    <string name="history">history</string>

    <string name="close">닫기</string>
    <string name="clearHistory">계산기록 삭제</string>
</resources>